tenzir/tests/exec/expr/escape/blob/invalid_utf8_byte.txt
error: string contains invalid utf-8
 --> exec/expr/escape/blob/invalid_utf8_byte.tql:4:7
  |
4 |   s1: "\xFF", // Invalid UTF-8 byte
  |       ^^^^^^ 
  |
  = hint: consider using a blob instead: b"…"
